OGM-1176 Java 9 preview builds need --add-modules instead of -addmods as build option