@@ -780,7 +780,7 @@
                 <jdk>9</jdk>
             </activation>
             <properties>
-                <additionalRuntimeArgLine>-addmods java.xml.bind</additionalRuntimeArgLine>
+                <additionalRuntimeArgLine>--add-modules java.xml.bind</additionalRuntimeArgLine>
             </properties>
         </profile>
         <profile>
